# wasm-interface-capability-nodejs

./: .gitignore  Cargo.toml  README.md  index.js  instantiate.js  interfaceOPC.js  main.js  package-lock.json  package.json  simple_func.js
assembly/: env.ts  index.ts
rust-src/: lib.rs  mqtt-client.js
