[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Otoya Nakakaze <otoya.nakakaze@rwth-aachen.de>"]
edition = "2018"

[lib]
name = "main"
path = "rust-src/lib.rs"
crate-type =["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level='z'

[dependencies]
wasm-bindgen = "0.2.63"
